--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -1,14 +1,5 @@
 rules = [
-  # ExplicitResultTypes
-  RemoveUnusedImports
-  RemoveXmlLiterals
-  ProcedureSyntax
-  # DottyVolatileLazyVal
-  ExplicitUnit
-  # DottyVarArgPattern
+  # RemoveUnusedImports
   NoAutoTupling
   NoValInForComprehension
-  # Sbt1 # N/A
-  # NoInfer
-  Disable
 ]
