Docker compose set up

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -12,3 +12,5 @@ project.excludeFilters = [
   "Fixtures.scala"
 ]
 docstrings.style = keep // don't format comment
+align.stripMargin = true
+assumeStandardLibraryStripMargin = true
