--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -2,7 +2,7 @@ name: Pull Request
 
 on:
   pull_request:
-    branches: [trunk]
+    branches: [master]
 
 jobs:
   test:
@@ -16,11 +16,10 @@ jobs:
         with:
           distribution: 'corretto'
           java-version: '11'
-      # - name: Check Fomatting
-      #   shell: bash
-      #   run: |
-      #     # sbt -v "scalafmtCheckAll;"
-      #     sbt -v "compile;"
+      - name: Check Fomatting
+        shell: bash
+        run: |
+          sbt -v "scalafmtCheckAll;"
       - name: Compile Code
         shell: bash
         run: |
@@ -30,22 +29,5 @@ jobs:
       #   run: |
       #     # sbt -v "test;"
       #     sbt -v "compile;"
-      - uses: aws-actions/setup-sam@v2
-        with:
-          use-installer: true
-      - name: Packaging Code
-        shell: bash
-        run: |
-          sbt -v "assembly; runMain chessfinder.SamTemplate;"
-          cat template.yaml
-      - uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
-      
-      
-      - name: Deploying Application
-        run: |
-          sam deploy --template-file template.yaml --stack-name sam-app --capabilities CAPABILITY_IAM --s3-bucket [name of your bucket]
+
 
