--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -11,6 +11,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+           
+      - name: Setup JDK
+        uses: actions/setup-java@v3.11.0
+        with:
+          distribution: 'corretto'
+          java-version: '11'
+      
       - name: Derive Tag
         run: |
           echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
@@ -26,9 +33,30 @@ jobs:
             This release contains changes for version ${{ env.release_version }}.
           draft: false
           prerelease: false
-     
-      - name: Deploying to Prod
+
+      - name: Compile Code
+        shell: bash
         run: |
-          # sbt 'runMain chessfinder.SamTemplate' assembly
-          # 
-          echo "Deploy to Prod"
+          sbt -v "compile;"
+      
+      - name: setup SAM
+        uses: aws-actions/setup-sam@v2
+        with:
+          use-installer: true
+      
+      - name: Packaging Code
+        shell: bash
+        run: |
+          sbt -v "assembly; runMain chessfinder.SamTemplate;"
+          cat template.yaml
+      
+      - name: Configure AWS CLI
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      
+      - name: Deploying Application
+        run: |
+          sam deploy --template-file template.yaml --stack-name chessfinder --capabilities CAPABILITY_IAM --s3-bucket ${{ secrets.AWS_APPLICATION_BUCKET }}
