--- a/src/it/resources/docker-compose.yaml
+++ b/src/it/resources/docker-compose.yaml
@@ -1,23 +1,24 @@
 version: '3.9'
 
 services:
-  
-#  wiremock:
-#    image: wiremock/wiremock:latest
-#    container_name: wiremock
-#    restart: "no"
-#    hostname: wiremock
-#    ports:
-#      - "${WIREMOCK_EXPOSED_PORT}:8443"
-#    command: ["--port", "8443"]
 
-  wiremock-gui:
-    image: "holomekc/wiremock-gui:latest"
-    container_name: wiremock-gui
+  wiremock:
+    image: wiremock/wiremock:latest
+    container_name: wiremock
+    restart: "no"
+    hostname: wiremock
     ports:
       - "${WIREMOCK_EXPOSED_PORT}:8443"
-    environment:
-      WIREMOCK_OPTIONS: "--port=8443,--max-request-journal=1000,--local-response-templating,--root-dir=/home/wiremock/storage"
+    command:
+      [
+        "--port",
+        "8443",
+        "--max-request-journal",
+        "1000",
+        "--local-response-templating",
+        "--root-dir",
+        "/home/wiremock/storage"
+      ]
 
 #   dynamodb:
 #     image: amazon/dynamodb-local:latest
