--- a/src/test/resources/docker-compose_local.yaml
+++ b/src/test/resources/docker-compose_local.yaml
@@ -2,22 +2,22 @@ version: '3.9'
 
 services:
   
-  wiremock:
-    image: wiremock/wiremock:latest
-    container_name: wiremock
-    restart: "no"
-    hostname: wiremock
+#  wiremock:
+#    image: wiremock/wiremock:latest
+#    container_name: wiremock
+#    restart: "no"
+#    hostname: wiremock
+#    ports:
+#      - "${WIREMOCK_EXPOSED_PORT}:8443"
+#    command: ["--port", "8443"]
+
+  wiremock-gui:
+    image: "holomekc/wiremock-gui:latest"
+    container_name: wiremock-gui
     ports:
       - "${WIREMOCK_EXPOSED_PORT}:8443"
-    command: ["--port", "8443", "--max-request-journal", "1000", "--local-response-templating", "--root-dir", "/home/wiremock/storage"]
-
-  # wiremock-gui:
-  #   image: "holomekc/wiremock-gui:latest"
-  #   container_name: wiremock-gui
-  #   ports:
-  #     - "${WIREMOCK_EXPOSED_PORT}:8443"
-  #   environment:
-  #     WIREMOCK_OPTIONS: "--port=8443,--max-request-journal=1000,--local-response-templating,--root-dir=/home/wiremock/storage"
+    environment:
+      WIREMOCK_OPTIONS: "--port=8443,--max-request-journal=1000,--local-response-templating,--root-dir=/home/wiremock/storage"
 
 #   dynamodb:
 #     image: amazon/dynamodb-local:latest
