--- a/src/it/resources/local.conf
+++ b/src/it/resources/local.conf
@@ -3,3 +3,15 @@ include "application"
 swagger-config.enabled = true
 
 client.chesscom.baseUrl = "http://localhost:18443/chess_com"
+
+database-dynamodb-config = {
+  region = "us-east-1"
+  uri = "http://localhost:4746"
+}
+
+logger {
+  rootLevel = "ERROR"
+  mappings {
+      "io.netty" = "OFF"
+  }
+}
