--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -2,7 +2,7 @@ name: Deploy QA
 
 on:
   push:
-    branches: [master]
+    branches: [Xmaster]
 
 jobs:
   build:
@@ -43,4 +43,4 @@ jobs:
       
       - name: Deploying Application
         run: |
-          sam deploy --template-file template.yaml --stack-name chessfinder --capabilities CAPABILITY_IAM --s3-bucket ${{ secrets.AWS_APPLICATION_BUCKET }}
+          sam deploy --template-file template.yaml --stack-name chessfinder --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND --s3-bucket ${{ secrets.AWS_APPLICATION_BUCKET }}
