--- a/src/it/resources/.env
+++ b/src/it/resources/.env
@@ -1,1 +1,8 @@
 WIREMOCK_EXPOSED_PORT=18443
+DYNAMO_DB_EXTERNAL_PORT=4746
+DYNAMO_DB_INTERNAL_PORT=8000
+DYNAMO_DB_ADMIN_PORT=4747
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=AwsAccessKey
+AWS_SECRET_ACCESS_KEY=AwsSecretKey
+STORAGE=../../../hole
