--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -6,12 +6,11 @@ client {
 
 database-dynamodb-config {
   region = "us-east-1"
-#  uri = "https://dynamodb.${AWS_REGION}.amazonaws.com"
   uri = "https://dynamodb.us-east-1.amazonaws.com"
 }
 
 logger {
-  format = "%label{timestamp}{%timestamp{yyyy-MM-dd'T'HH:mm:ssZ}} %label{level}{%level} %label{fiberId}{%fiberId} %label{message}{%message} %label{cause}{%cause} %label{name}{%name} %kvs"
+  format = "%label{timestamp}{%timestamp{yyyy-MM-dd'T'HH:mm:ssZ}} %label{level}{%level} %label{fiberId}{%fiberId} %label{message}{%message} %label{cause}{%cause} %label{name}{%name} %kvs %spans"
   // rootLevel = "DEBUG"
   mappings {
       "io.netty" = "OFF"
