--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -43,4 +43,4 @@ jobs:
       
       - name: Deploying Application
         run: |
-          sam deploy --template-file template.yaml --stack-name chessfinder --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND --s3-bucket ${{ secrets.AWS_APPLICATION_BUCKET }}
+          sam deploy --template-file template.yaml --stack-name chessfinder --capabilities CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND --s3-bucket ${{ secrets.AWS_APPLICATION_BUCKET }}
