--- a/.infrastructure/role.yaml
+++ b/.infrastructure/role.yaml
@@ -18,6 +18,7 @@ Resources:
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
         - "arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess"
+        - "arn:aws:iam::aws:policy/AmazonSQSFullAccess"
       MaxSessionDuration: 43200
       Path: "/chessfinder/"
       RoleName: "RoleForChessfinderLambda"
