--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,6 +9,13 @@ database-dynamodb-config {
   uri = "https://dynamodb.us-east-1.amazonaws.com"
 }
 
+sqs-config {
+  region = "us-east-1"
+  uri = "https://sqs.us-east-1.amazonaws.com"
+  # queues.download-games.url = ${?DOWNLOAD_GAMES_QUEUE_URL}
+  queues.download-games.url = "https://sqs.us-east-1.amazonaws.com/363515748671/DownloadGames.fifo"
+}
+
 logger {
   format = "%label{timestamp}{%timestamp{yyyy-MM-dd'T'HH:mm:ssZ}} %label{level}{%level} %label{fiberId}{%fiberId} %label{message}{%message} %label{cause}{%cause} %label{name}{%name} %kvs %spans"
   // rootLevel = "DEBUG"
