--- a/src/it/resources/docker-compose.yaml
+++ b/src/it/resources/docker-compose.yaml
@@ -31,3 +31,23 @@ services:
       - "${DYNAMO_DB_EXTERNAL_PORT}:8000"
     # volumes:
     #   - ${STORAGE}/dynamodb:/home/dynamodblocal/data
+
+  localstack:
+    container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
+    image: localstack/localstack
+    ports:
+      - "127.0.0.1:4566:4566"            # LocalStack Gateway
+      - "127.0.0.1:4510-4559:4510-4559"  # ext services port range
+      - "127.0.0.1:53:53"                # DNS config
+      - "127.0.0.1:53:53/udp"            # DNS config
+      - "127.0.0.1:443:443"              # LocalStack HTTPS Gateway
+    environment:
+      - SERVICES=sqs:4511,secretsmanager:4512
+      - DEBUG=${DEBUG-}
+      - PERSISTENCE=${PERSISTENCE-}
+      - LAMBDA_EXECUTOR=${LAMBDA_EXECUTOR-}
+      - LOCALSTACK_API_KEY=${LOCALSTACK_API_KEY-}  # only required for Pro
+      - DOCKER_HOST=unix:///var/run/docker.sock
+    volumes:
+      - "${STORAGE}/localstack:/var/lib/localstack"
+      - "/var/run/docker.sock:/var/run/docker.sock"
