--- a/src/it/resources/local.conf
+++ b/src/it/resources/local.conf
@@ -9,6 +9,12 @@ database-dynamodb-config = {
   uri = "http://localhost:4746"
 }
 
+sqs-config {
+  region = "us-east-1"
+  uri = "http://localhost:4566"
+  queues.download-games.url = "http://localhost:4566/000000000000/download-games.fifo"
+}
+
 logger {
   rootLevel = "ERROR"
   mappings {
