--- a/src/it/resources/local.conf
+++ b/src/it/resources/local.conf
@@ -1,4 +1,4 @@
-include "application"
+include "application.conf"
 
 swagger-config.enabled = true
 
@@ -6,14 +6,12 @@ client.chesscom.baseUrl = "http://localhost:18443/chess_com"
 
 database-dynamodb-config = {
   region = "us-east-1"
-  uri = "http://localhost:4746"
+  uri = "http://localhost:4566"
 }
 
 sqs-config {
   region = "us-east-1"
   uri = "http://localhost:4566"
-  queues.download-games.url = "http://localhost:4566/000000000000/download-games.fifo"
-  queues.search-board.url = "http://localhost:4566/000000000000/search-board.fifo"
 }
 
 logger {
