--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,8 @@ client {
   }
 }
 
+aa.f = 7
+
 database-dynamodb-config {
   region = "us-east-1"
   uri = "https://dynamodb.us-east-1.amazonaws.com"
@@ -12,9 +14,8 @@ database-dynamodb-config {
 sqs-config {
   region = "us-east-1"
   uri = "https://sqs.us-east-1.amazonaws.com"
-  # queues.download-games.url = ${?DOWNLOAD_GAMES_QUEUE_URL}
-  queues.download-games.url = "https://sqs.us-east-1.amazonaws.com/363515748671/DownloadGames.fifo"
-  queues.search-board.url = "https://sqs.us-east-1.amazonaws.com/363515748671/SearchBoard.fifo"
+  queues.download-games.name = "DownloadGames.fifo"
+  queues.search-board.name = "SearchBoard.fifo"
 }
 
 logger {
