fix: fix path of the SamTemplate (#38)

--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Packaging Code
         shell: bash
         run: |
-          sbt -v "assembly; runMain chessfinder.SamTemplate;"
+          sbt -v "assembly; runMain chessfinder.util.SamTemplate;"
           cat template.yaml
       
       - name: Configure AWS CLI
