--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,7 +14,7 @@ database-dynamodb-config {
 sqs-config {
   region = "us-east-1"
   uri = "https://sqs.us-east-1.amazonaws.com"
-  queues.download-games.name = "DownloadGames.fifo"
+  queues.download-games.name = "DownloadGames"
   queues.search-board.name = "SearchBoard.fifo"
 }
 
