--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -11,44 +11,88 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-           
-      - name: Setup JDK
-        uses: actions/setup-java@v3.11.0
-        with:
-          distribution: 'corretto'
-          java-version: '17'
       
       - name: Derive Tag
         run: |
           echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
           echo "release_version=$GITHUB_REF_NAME" >> $GITHUB_ENV
-      - name: Create release
-        uses: actions/create-release@v1.1.4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.release_version }}
-          release_name: Release ${{ env.release_version }}
-          body: |
-            This release contains changes for version ${{ env.release_version }}.
-          draft: false
-          prerelease: false
+      # - name: Create release
+      #   uses: actions/create-release@v1.1.4
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     tag_name: ${{ env.release_version }}
+      #     release_name: Release ${{ env.release_version }}
+      #     body: |
+      #       This release contains changes for version ${{ env.release_version }}.
+      #     draft: false
+      #     prerelease: false
 
-      - name: Compile Code
+      - name: SCALA - Setup JDK
+        uses: actions/setup-java@v3.11.0
+        with:
+          distribution: 'corretto'
+          java-version: '17'
+
+      - name: GO - Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.21.0'
+      
+      - name: SCALA - Compile Code
         shell: bash
         run: |
           sbt -v "compile;"
+      
+      - name: GO - Install dependencies
+        run: |
+          cd src_go/download/check_status
+          go get .
+          go mod tidy
+          cd ../../../
+
+          cd src_go/download/initiate
+          go get .
+          go mod tidy
+          cd ../../../
+
+          cd src_go/search/check_status
+          go get .
+          go mod tidy
+          cd ../../../
+
+      - name: GO - Build
+        shell: bash
+        run: |
+          GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o ./src_go/download/check_status/bootstrap -tags lambda.norpc ./src_go/download/check_status/.
+          GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o ./src_go/download/initiate/bootstrap -tags lambda.norpc ./src_go/download/initiate/.
+          GOOS=linux GOARCH=arm64 CGO_ENABLED=0 go build -v -o ./src_go/search/check_status/bootstrap -tags lambda.norpc ./src_go/search/check_status/.
+
+      
+      - name: SCALA - Packaging Code
+        shell: bash
+        run: |
+          sbt -v "assembly; runMain messagesender.SamTemplate;"
+
+      - name: GO - Packaging Code
+        shell: bash
+        run: |
+          cd ./src_go/download/check_status
+          zip check_status.zip bootstrap
+          cd ../../../
+
+          cd ./src_go/download/initiate
+          zip initiate.zip bootstrap
+          cd ../../../
+
+          cd ./src_go/search/check_status
+          zip check_status.zip bootstrap
+          cd ../../../
       
       - name: setup SAM
         uses: aws-actions/setup-sam@v2
         with:
           use-installer: true
-      
-      - name: Packaging Code
-        shell: bash
-        run: |
-          sbt -v "assembly; runMain chessfinder.util.SamTemplate;"
-          cat template.yaml
       
       - name: Configure AWS CLI
         uses: aws-actions/configure-aws-credentials@v1
