--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,16 @@ target
 .metals/
 .vscode/
 hole/
-.infrastructure/api.yaml
+.infrastructure/slower_api.yaml
 
+src_go/search/check_status/check_status
+src_go/search/check_status/check_status.zip
+src_go/search/check_status/bootstrap
+
+src_go/download/check_status/check_status
+src_go/download/check_status/check_status.zip
+src_go/download/check_status/bootstrap
+
+src_go/download/initiate/initiate
+src_go/download/initiate/initiate.zip
+src_go/download/initiate/bootstrap
